--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "Anas Abdelhakmi"
 title_separator          : "-"
 name                     : &name "Anas Abdelhakmi"
 description              : &description "personal description"
-url                      : https://abdanas.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://anasabdelhakmi.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "abdanas/abdanas.github.io"
+repository               : "anasabdelhakmi/anasabdelhakmi.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
