--- a/_config.yml
+++ b/_config.yml
@@ -121,7 +121,7 @@ atom_feed:
 
 
 # SEO Related
-google_site_verification :
+google_site_verification : google-site-verification=-VgolepuGlfOPWVmD8db-qLCjOutVq0SBCJcqM2TdSQ
 bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
